EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==11/26/2011==
Leere: NPCs (and thus pets) are now able to equip items in non-visble slots. They will also look inside of bags that are traded to them for those items.
The pets table was expanded. It can now map to several npc IDs for the same pet type string, based on pet power. (This has replaced the old approach of letting pet power be a direct boost to NPC stats. The intention is to now have distinct npc_type table entries for the various pet power levels that a pet supports.) Pet naming and pet control was likewise moved out of code logic and to the pets table. (The default pet control is now petFamiliar rather than petOther.) Pets can now have items already equipped when summoned. The equipment sets used for that can be shared between pets and also be nested up to a depth of 5.
Pets are no longer stored as part of the profile blobs.
Pets (charmed and summoned) belonging to clients should no longer attempt to assist other NPCs if they hear a call for help.

Required SQL:
utils/sql/sv/2069_required_pets.sql

==11/21/2011==
Akkadius: Implemented NPC Special Attack 'Z'. This will keep clients from being able to attack an NPC altogether similar to live.

==11/17/2011==
Congdar: Fix charms Platinum Disc and Gold Pin. You'll need updated items\CHRMGold.pl and \items\CHRMPlatinum.pl once pushed to the quest repository.

==11/17/2011==
Lerxst: Fixed crash when calculating random focus effect from an augment when the base item had no focus effect.
Also added some bulletproofing in case that isn't the only place an invalid spell id might be passed.

==11/16/2011==
Akkadius: Added the ability to specify doors/objects/ground spawns to load for all versions of the same zone regardless by setting the value to -1. 
This reduces serious redundancy of copying the same data over and over for instances.

Required SQL:
utils/sql/svn/2062_required_version_changes.sql
